tests/neg-custom-args/captures/real-try.check
-- [E190] Potential Issue Warning: tests/neg-custom-args/captures/real-try.scala:30:4 ----------------------------------
30 |  b.x
   |  ^^^
   |  Discarded non-Unit value of type () -> Unit. Add `: Unit` to discard silently.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/real-try.scala:12:2 -----------------------------------------------------------
12 |  try  // error
   |  ^
   |  Result of `try` cannot have type () => Unit since
   |  that type captures the root capability `cap`.
   |  This is often caused by a locally generated exception capability leaking as part of its result.
   |
13 |    () => foo(1)
14 |...
16 |    case _: Ex2 => ???
-- Error: tests/neg-custom-args/captures/real-try.scala:18:2 -----------------------------------------------------------
18 |  try  // error
   |  ^
   |  Result of `try` cannot have type () => Cell[Unit]^? since
   |  that type captures the root capability `cap`.
   |  This is often caused by a locally generated exception capability leaking as part of its result.
   |
19 |    () => Cell(foo(1))
20 |...
22 |    case _: Ex2 => ???
-- Error: tests/neg-custom-args/captures/real-try.scala:24:10 ----------------------------------------------------------
24 |  val b = try  // error
   |          ^
   |          Result of `try` cannot have type Cell[box () => Unit]^? since
   |          the part box () => Unit of that type captures the root capability `cap`.
   |          This is often caused by a locally generated exception capability leaking as part of its result.
   |
25 |    Cell(() => foo(1))//: Cell[box {ev} () => Unit] <: Cell[box {cap} () => Unit]
26 |...
28 |    case _: Ex2 => ???
